# sudoku

./: .drone.yml  README.md  example.py  pyproject.toml  requirements-test.txt  solve.py  test.py
