[project]
name = "sudoku"
authors = [
    {name = "Albert Wang", email = "git@albertyw.com"},
]
description = "Sudoku solver"
version = "0.0.1"

[project.optional-dependencies]
test = [
    # Testing
    "flake8==3.7.5",        # python linting
    "coverage==6.5.0",      # test coverage

    # Types
    "mypy==0.982",          # type checking
]
